# normal-browser

./: .gitignore  BUILD_INSTRUCTIONS.md  CUSTOM_BROWSER_BUILD_SPEC.md  FEATURES.md  README.md  apply_patches.sh  network-log.har
patches/: build_gn_patches.sh  chromium_hook_patches.sh
scripts/: apply_build_gn_patches.sh  apply_hook_points.sh  apply_patches.sh  build_normal_browser.sh  fingerprint_test_page.html  test_fingerprint.sh
src/: BUILD_INTEGRATION.gn
src/chromium_patches/android/java/org/nicebrowser/ghost/: AutoRotateManager.java  GhostModeManager.java  GhostModeMenuHelper.java  IdentityLogActivity.java
src/chromium_patches/android/native/: ghost_mode_jni_bridge.cc
src/chromium_patches/blink/: ghost_profile_client.cc  ghost_profile_client.h
src/chromium_patches/blink/anti_bot/: anti_bot_markers.cc  anti_bot_markers.h
src/chromium_patches/blink/audio/: audio_spoofing.cc
src/chromium_patches/blink/canvas/: canvas_spoofing.cc
src/chromium_patches/blink/css_webgpu_speech/: css_webgpu_speech_spoofing.cc
src/chromium_patches/blink/domrect/: domrect_spoofing.cc
src/chromium_patches/blink/fonts/: font_spoofing.cc  font_spoofing.h
src/chromium_patches/blink/media/: media_devices_spoofing.cc
src/chromium_patches/blink/navigator/: navigator_spoofing.cc
src/chromium_patches/blink/screen/: screen_spoofing.cc
src/chromium_patches/blink/sensors/: sensor_spoofing.cc
src/chromium_patches/blink/storage/: storage_memory_spoofing.cc
src/chromium_patches/blink/timing/: performance_timing_spoofing.cc
src/chromium_patches/blink/webgl/: webgl_spoofing.cc
src/chromium_patches/blink/webrtc/: webrtc_ip_spoofing.cc
src/chromium_patches/boringssl/: boringssl_tls_patch.cc  boringssl_tls_patch.h
src/chromium_patches/browser/: browser_startup_wiring.cc  browser_startup_wiring.h
src/chromium_patches/content/: ghost_profile.mojom  ghost_profile_host.cc  ghost_profile_host.h
src/chromium_patches/network/: http_header_patch.cc  http_header_patch.h
src/chromium_patches/sandbox/: proc_access_sandbox.cc
src/chromium_patches/timezone/: timezone_locale_patch.cc
src/chromium_patches/v8/: v8_math_patch.cc  v8_math_patch.h
src/device_profile_generator/: BUILD.gn  build_fingerprint_generator.cc  build_fingerprint_generator.h  device_profile.cc  device_profile.h  gpu_database.cc  gpu_database.h  manufacturer_traits.cc  manufacturer_traits.h  model_name_generator.cc  model_name_generator.h  profile_generator.cc  profile_generator.h  profile_store.cc  profile_store.h  profile_validator.cc  profile_validator.h
src/emoji_fonts/: README.md
src/software_math/: BUILD.gn  software_math.cc  software_math.h
src/tls_randomizer/: BUILD.gn  tls_randomizer.cc  tls_randomizer.h
